--- a/prepros-6.config
+++ b/prepros-6.config
@@ -26,10 +26,10 @@
         "jade/meta/web-master.jade",
         "jade/meta/favicon.jade",
         "jade/meta/copyright.jade",
+        "jade/block/nav.jade",
         "jade/block/header.jade",
         "jade/block/footer.jade",
-        "jade/meta/js.jade",
-        "jade/block/nav.jade"
+        "jade/meta/js.jade"
       ]
     },
     {
