--- a/prepros-6.config
+++ b/prepros-6.config
@@ -19,20 +19,6 @@
   },
   "imports": [
     {
-      "path": "index.jade",
-      "imports": [
-        "jade/meta/services.jade",
-        "jade/meta/css.jade",
-        "jade/meta/web-master.jade",
-        "jade/meta/favicon.jade",
-        "jade/meta/copyright.jade",
-        "jade/block/nav.jade",
-        "jade/block/header.jade",
-        "jade/block/footer.jade",
-        "jade/meta/js.jade"
-      ]
-    },
-    {
       "path": "scss/main.scss",
       "imports": [
         "scss/utility/css-reset.scss",
@@ -57,16 +43,17 @@
       ]
     },
     {
-      "path": "biography/index.jade",
+      "path": "index.jade",
       "imports": [
         "jade/meta/services.jade",
         "jade/meta/css.jade",
         "jade/meta/web-master.jade",
         "jade/meta/favicon.jade",
         "jade/meta/copyright.jade",
-        "jade/block/nav.jade",
+        "jade/block/header.jade",
         "jade/block/footer.jade",
-        "jade/meta/js.jade"
+        "jade/meta/js.jade",
+        "jade/block/nav.jade"
       ]
     },
     {
@@ -77,7 +64,20 @@
         "jade/meta/web-master.jade",
         "jade/meta/favicon.jade",
         "jade/meta/copyright.jade",
-        "jade/block/nav.jade",
+        "jade/block/nav-light.jade",
+        "jade/block/footer.jade",
+        "jade/meta/js.jade"
+      ]
+    },
+    {
+      "path": "biography/index.jade",
+      "imports": [
+        "jade/meta/services.jade",
+        "jade/meta/css.jade",
+        "jade/meta/web-master.jade",
+        "jade/meta/favicon.jade",
+        "jade/meta/copyright.jade",
+        "jade/block/nav-light.jade",
         "jade/block/footer.jade",
         "jade/meta/js.jade"
       ]
@@ -90,7 +90,7 @@
         "jade/meta/web-master.jade",
         "jade/meta/favicon.jade",
         "jade/meta/copyright.jade",
-        "jade/block/nav.jade",
+        "jade/block/nav-light.jade",
         "jade/block/footer.jade",
         "jade/meta/js.jade"
       ]
@@ -103,7 +103,7 @@
         "jade/meta/web-master.jade",
         "jade/meta/favicon.jade",
         "jade/meta/copyright.jade",
-        "jade/block/nav.jade",
+        "jade/block/nav-light.jade",
         "jade/block/footer.jade",
         "jade/meta/js.jade"
       ]
@@ -116,20 +116,7 @@
         "jade/meta/web-master.jade",
         "jade/meta/favicon.jade",
         "jade/meta/copyright.jade",
-        "jade/block/nav.jade",
-        "jade/block/footer.jade",
-        "jade/meta/js.jade"
-      ]
-    },
-    {
-      "path": "catalogue-raisonne/paintings/index.jade",
-      "imports": [
-        "jade/meta/services.jade",
-        "jade/meta/css.jade",
-        "jade/meta/web-master.jade",
-        "jade/meta/favicon.jade",
-        "jade/meta/copyright.jade",
-        "jade/block/nav.jade",
+        "jade/block/nav-light.jade",
         "jade/block/footer.jade",
         "jade/meta/js.jade"
       ]
@@ -142,7 +129,20 @@
         "jade/meta/web-master.jade",
         "jade/meta/favicon.jade",
         "jade/meta/copyright.jade",
-        "jade/block/nav.jade",
+        "jade/block/nav-light.jade",
+        "jade/block/footer.jade",
+        "jade/meta/js.jade"
+      ]
+    },
+    {
+      "path": "catalogue-raisonne/paintings/index.jade",
+      "imports": [
+        "jade/meta/services.jade",
+        "jade/meta/css.jade",
+        "jade/meta/web-master.jade",
+        "jade/meta/favicon.jade",
+        "jade/meta/copyright.jade",
+        "jade/block/nav-light.jade",
         "jade/block/footer.jade",
         "jade/meta/js.jade"
       ]
