--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "davidburliuk.org",
+  "name": "db",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [],
@@ -23,14 +23,13 @@
       "imports": [
         "scss/utility/css-reset.scss",
         "scss/bootstrap/bootstrap-grid.scss",
-        "scss/magnific/main.scss",
         "scss/utility/rfs.scss",
         "scss/utility/font.scss",
-        "scss/block/header.scss",
         "scss/block/nav.scss",
+        "scss/block/header.scss",
         "scss/block/footer.scss",
-        "scss/block/gallery.scss",
-        "scss/element/btn.scss",
+        "scss/block/btn.scss",
+        "scss/block/form.scss",
         "scss/bootstrap/_functions.scss",
         "scss/bootstrap/_variables.scss",
         "scss/bootstrap/mixins/_breakpoints.scss",
@@ -38,8 +37,7 @@
         "scss/bootstrap/mixins/_grid.scss",
         "scss/bootstrap/_grid.scss",
         "scss/bootstrap/utilities/_display.scss",
-        "scss/bootstrap/utilities/_flex.scss",
-        "scss/magnific/_settings.scss"
+        "scss/bootstrap/utilities/_flex.scss"
       ]
     },
     {
@@ -50,101 +48,79 @@
         "jade/meta/web-master.jade",
         "jade/meta/favicon.jade",
         "jade/meta/copyright.jade",
-        "jade/block/header.jade",
-        "jade/block/footer.jade",
-        "jade/meta/js.jade",
-        "jade/block/nav.jade"
+        "jade/block/nav-main.jade"
       ]
     },
     {
-      "path": "catalogue-raisonne/index.jade",
+      "path": "about-the-foundation/index.jade",
       "imports": [
         "jade/meta/services.jade",
         "jade/meta/css.jade",
         "jade/meta/web-master.jade",
         "jade/meta/favicon.jade",
         "jade/meta/copyright.jade",
-        "jade/block/nav-light.jade",
-        "jade/block/footer.jade",
-        "jade/meta/js.jade"
+        "jade/block/nav-main.jade",
+        "jade/block/footer.jade"
       ]
     },
     {
-      "path": "biography/index.jade",
+      "path": "user-s-policy/index.jade",
       "imports": [
         "jade/meta/services.jade",
         "jade/meta/css.jade",
         "jade/meta/web-master.jade",
         "jade/meta/favicon.jade",
         "jade/meta/copyright.jade",
-        "jade/block/nav-light.jade",
-        "jade/block/footer.jade",
-        "jade/meta/js.jade"
+        "jade/block/nav-main.jade",
+        "jade/block/footer.jade"
       ]
     },
     {
-      "path": "contact/index.jade",
+      "path": "authentication-registration-of-works/index.jade",
       "imports": [
         "jade/meta/services.jade",
         "jade/meta/css.jade",
         "jade/meta/web-master.jade",
         "jade/meta/favicon.jade",
         "jade/meta/copyright.jade",
-        "jade/block/nav-light.jade",
-        "jade/block/footer.jade",
-        "jade/meta/js.jade"
+        "jade/block/nav-main.jade",
+        "jade/block/footer.jade"
       ]
     },
     {
-      "path": "directors-advisors-staff/index.jade",
+      "path": "catalogue-raison/index.jade",
       "imports": [
         "jade/meta/services.jade",
         "jade/meta/css.jade",
         "jade/meta/web-master.jade",
         "jade/meta/favicon.jade",
         "jade/meta/copyright.jade",
-        "jade/block/nav-light.jade",
-        "jade/block/footer.jade",
-        "jade/meta/js.jade"
+        "jade/block/nav-main.jade",
+        "jade/block/footer.jade"
       ]
     },
     {
-      "path": "user's-policy/index.jade",
+      "path": "david-d-burliuk/index.jade",
       "imports": [
         "jade/meta/services.jade",
         "jade/meta/css.jade",
         "jade/meta/web-master.jade",
         "jade/meta/favicon.jade",
         "jade/meta/copyright.jade",
-        "jade/block/nav-light.jade",
-        "jade/block/footer.jade",
-        "jade/meta/js.jade"
+        "jade/block/nav-main.jade",
+        "jade/block/footer.jade"
       ]
     },
     {
-      "path": "catalogue-raisonne/drawings/index.jade",
+      "path": "contact-the-foundation/index.jade",
       "imports": [
         "jade/meta/services.jade",
         "jade/meta/css.jade",
         "jade/meta/web-master.jade",
         "jade/meta/favicon.jade",
         "jade/meta/copyright.jade",
-        "jade/block/nav-light.jade",
-        "jade/block/footer.jade",
-        "jade/meta/js.jade"
-      ]
-    },
-    {
-      "path": "catalogue-raisonne/paintings/index.jade",
-      "imports": [
-        "jade/meta/services.jade",
-        "jade/meta/css.jade",
-        "jade/meta/web-master.jade",
-        "jade/meta/favicon.jade",
-        "jade/meta/copyright.jade",
-        "jade/block/nav-light.jade",
-        "jade/block/footer.jade",
-        "jade/meta/js.jade"
+        "jade/block/nav-main.jade",
+        "jade/block/footer.jade"
       ]
     }
   ],
@@ -190,7 +166,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7883,
+    "port": 7887,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
